# agent-manager

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  svelte.config.js
.github/workflows/: checks.yml  release-desktop.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agents.rs  agents_md.rs  database.rs  gaal.rs  lib.rs  mcp.rs  settings.rs  skills.rs
src/lib/components/: VerticalResizeHandle.svelte
src/lib/features/agents/: AgentsWorkspace.svelte  api.ts  types.ts
src/lib/features/agentsMd/: AgentsMdWorkspace.svelte  api.ts  types.ts
src/lib/features/mcp/: McpWorkspace.svelte  api.ts  types.ts
src/lib/features/settings/: SettingsWorkspace.svelte  api.ts  types.ts
src/lib/features/skills/: api.ts  types.ts
src/routes/: +page.svelte
